--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Comfortaa';
-    /* font-size: 0.8rem; */
 }
 
 header {
@@ -31,4 +30,46 @@ nav a {
     color: hsla(0, 0%, 100%, 0.75);
     font-size: 1.1rem;
     font-weight: bold;
+}
+
+main {
+    padding: 40px;
+}
+.program-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+}
+.program-card {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.program-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.program-card h2 {
+    font-size: 1.5rem;
+    margin: 15px 0;
+}
+.program-card p {
+    font-size: 1rem;
+    color: #555;
+}
+.program-card button {
+    background-color: #5c6bc0;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+.program-card button:disabled {
+    background-color: grey;
 }
