--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,10 +2,11 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Comfortaa';
+    background: hsla(0, 0%, 90%, 0.75);
 }
 
 header {
-    padding: 2%;
+    padding: 1%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -15,7 +16,7 @@ header {
 }
 
 .logo img {
-    width: 50px;
+    width: 100px;
     border-radius: 50%;
 }
 
@@ -35,6 +36,7 @@ nav a {
 main {
     padding: 40px;
 }
+
 .program-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -44,23 +46,33 @@ main {
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(248, 50, 0, 0.1);
     text-align: center;
+    transition: .3s ease-in-out;
 }
+
+.program-card:hover {
+    scale: 1.05;
+}
+
 .program-card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
+    border: .5px solid hsla(17, 100%, 45%, 0.75);
 }
+
 .program-card h2 {
     font-size: 1.5rem;
     margin: 15px 0;
 }
+
 .program-card p {
     font-size: 1rem;
     color: #555;
 }
+
 .program-card button {
     background-color: #5c6bc0;
     color: white;
@@ -70,6 +82,7 @@ main {
     cursor: pointer;
     font-size: 1rem;
 }
+
 .program-card button:disabled {
     background-color: grey;
 }
