--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -86,3 +86,13 @@ main {
 .program-card button:disabled {
     background-color: grey;
 }
+
+#allout {
+    color: hsla(0, 100%, 45%, 0.75);
+    font-weight: 600;
+}
+
+#left {
+    color: hsl(40, 100%, 45%);
+    font-weight: 600;
+}
