--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -6,14 +6,31 @@ body {
     background: hsla(0, 0%, 90%, 0.75);
 }
 
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: hsla(17, 100%, 45%, 0.9);
+}
+
+::-webkit-scrollbar-thumb {
+    background: hsla(224, 64%, 57%, 1);
+    border-radius: 50px;
+}
+
 header {
     padding: 1%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background: hsla(17, 100%, 45%, 0.75);
+    background: hsla(17, 100%, 45%, .9);
     color: hsla(0, 0%, 100%, 0.75);
+    position: fixed;
+    width: 100dvw;
+    box-sizing: border-box;
+    z-index: 1;
 }
 
 .logo img {
@@ -34,10 +51,13 @@ nav a {
     font-weight: bold;
 }
 
+button {
+    background-color: hsl(224, 64%, 57%);
+    font-family: "Comfortaa";
+}
+
 header button {
-    background-color: #5c6bc0;
     color: white;
-    font-family: 'Comfortaa';
     border: none;
     padding: 10px;
     border-radius: 5px;
@@ -47,6 +67,7 @@ header button {
 
 main {
     padding: 40px;
+    padding-top: 10%;
 }
 
 .program-container {
@@ -92,7 +113,6 @@ main {
 }
 
 .program-card button {
-    background-color: #5c6bc0;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -110,7 +130,61 @@ main {
     font-weight: 600;
 }
 
-#left {
+#items5-left {
     color: hsl(40, 100%, 45%);
     font-weight: 600;
+}
+
+#items-left {
+    color: hsl(100, 100%, 45%);
+    font-weight: 600;
+}
+
+#checkout {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    padding: 0;
+}
+
+form {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+form p {
+    display: flex;
+    flex-direction: column;
+    width: 250%;
+    align-items: center;
+}
+
+form input {
+    height: 30px;
+    border: 1px solid hsla(17, 100%, 45%, 0.75);
+    border-radius: 10px;
+    width: 15%;
+    padding-inline: .5%;
+}
+
+form button {
+    width: auto;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.details {
+    /* display: flex; */
+    width: 30%;
+    padding: 1%;
+    background: hsla(17, 100%, 45%, 0.4);
+    border-radius: 15px;
 }
