--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -70,6 +70,32 @@ main {
     padding-top: 10%;
 }
 
+.filSor {
+    margin-bottom: 1%;
+    display: flex;
+    width: 90%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+}
+
+.filter {
+    margin-inline: 2%;
+}
+
+select {
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+    margin: 3%;
+    height: 30px;
+    width: 150px;
+    font-family: Comfortaa;
+    font-weight: 600;
+    border:  hsla(17, 100%, 45%, .9) 1.5px solid;
+    border-radius: 10px;
+}
+
 .program-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
