--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -95,7 +95,7 @@ button:disabled {
 
 main {
     padding: 40px;
-    padding-top: 170px;
+    padding-top: 120px;
 }
 
 .filSor {
@@ -285,3 +285,29 @@ li img {
     object-fit: cover;
     border-radius: 5px;;
 }
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.popup h2 {
+    margin-top: 0;
+}
+
